--- a/views/index.erb
+++ b/views/index.erb
@@ -26,6 +26,8 @@
                 </li>
                 <li>
                     <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">HOME</a>
+                    <i class="icon-home"></i>
+                    icon-home
                 </li>
                 <li class="w3-hide-small w3-dropdown-hover">
                     <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MÚSICA
@@ -48,7 +50,7 @@
                     <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MAS
                         <i class="fa fa-caret-down"></i>
                     </a>
-                    <div class="w3-dropdown-content w3-white w3-card-4">
+                    <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                         <a href="#">Merchandising</a>
                         <a href="#">Extras</a>
                         <a href="#">Media</a>
