--- a/views/index.erb
+++ b/views/index.erb
@@ -26,8 +26,7 @@
                 </li>
                 <li>
                     <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">HOME</a>
-                    <i class="icon-home"></i>
-                    icon-home
+                    <i class="material-icons">home</i>
                 </li>
                 <li class="w3-hide-small w3-dropdown-hover">
                     <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MÚSICA
