--- a/views/index.erb
+++ b/views/index.erb
@@ -25,8 +25,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">HOME</a>
-                    <i class="fa fa-home">home</i>
+                    <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large"><i class="fa fa-home"></i>HOME</a>
+
                 </li>
                 <li class="w3-hide-small w3-dropdown-hover">
                     <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MÚSICA
