--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link href="<%= url('/estilos/font-awesome.css') %>" rel="stylesheet" type="text/css"/>
+    <link href="<%= url('/estilos/font-awesome.min.css') %>" rel="stylesheet" type="text/css"/>
+
     <style>
         body {
             font-family: "Lato", sans-serif;
@@ -25,8 +27,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large"><i class="icon-home"></i> icon-home
-</i>HOME</a>
+                    <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large"><i class="icon-home"></i> icon-home</a>
 
                 </li>
                 <li class="w3-hide-small w3-dropdown-hover">
