--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <style>
@@ -28,7 +27,7 @@
                 </li>
                 <li>
                     <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">
-                        <i class="material-icons w3-large">home</i>
+                      <i class="icon-home"></i> icon-home
                     </a>
 
                 </li>
