--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,75 @@
         <link href="/imagenes/favicon.ico" rel="shortcut icon">
         <title>Buena Cosecha, Ska Reggae</title>
     </head>
+
+    <!-- Navbar -->
+    <div class="w3-top">
+        <ul class="w3-navbar w3-deep-orange w3-card-2 w3-right-align">
+            <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
+                <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">
+                    <i class="icon-home"></i>
+                    icon-home
+                </a>
+
+            </li>
+            <li class="w3-hide-small w3-dropdown-hover">
+                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MÚSICA
+                    <i class="fa fa-caret-down"></i>
+                </a>
+                <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
+                    <a href="#">Audios</a>
+                    <a href="#">Videos</a>
+                    <a href="#">Letras</a>
+                </div>
+            </li>
+
+            <li class="w3-hide-small">
+                <a href="#" class="w3-padding-large">FECHAS</a>
+            </li>
+            <li class="w3-hide-small">
+                <a href="#" class=" w3-padding-large">CONTACTO</a>
+            </li>
+            <li class="w3-hide-small w3-dropdown-hover">
+                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MAS
+                    <i class="fa fa-caret-down"></i>
+                </a>
+                <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
+                    <a href="#">Merchandising</a>
+                    <a href="#">Extras</a>
+                    <a href="#">Media</a>
+                </div>
+            </li>
+            <li class="w3-hide-small w3-right">
+                <a href="javascript:void(0)" class="w3-padding-large w3-hover-red">
+                    <i class="fa fa-search"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <!-- Navbar on small screens -->
+    <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+        <ul class="w3-navbar w3-center-align w3-black">
+            <li>
+                <a class="w3-padding-large" href="#">BANDA</a>
+            </li>
+            <li>
+                <a class="w3-padding-large" href="#">FECHAS</a>
+            </li>
+            <li>
+                <a class="w3-padding-large" href="#">CONTACTO</a>
+            </li>
+            <li>
+                <a class="w3-padding-large" href="#">MERCH</a>
+            </li>
+        </ul>
+    </div>
+
     <body>
         <div id='header'>
             <!-- <nav>
