--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,7 +24,7 @@
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MÚSICA
-                    <i class="fa fa-caret-down"></i>
+                    <i class="material-icons">library_music</i>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="#">Audios</a>
