--- a/views/layout.erb
+++ b/views/layout.erb
@@ -37,7 +37,9 @@
                 <a href="#" class="w3-padding-large">FECHAS</a>
             </li>
             <li class="w3-hide-small">
-                <a href="#" class=" w3-padding-large">CONTACTO</a>
+                <a href="#" class=" w3-padding-large">
+                    <i class="material-icons">contact_mail</i>
+                </a>
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MAS
