--- a/views/layout.erb
+++ b/views/layout.erb
@@ -38,12 +38,12 @@
             </li>
             <li class="w3-hide-small">
                 <a href="#" class=" w3-padding-large">
-                    <i class="material-icons">contact_mail</i>
+                    <i class="material-icons">mail</i>
                 </a>
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MAS
-                    <i class="fa fa-caret-down"></i>
+                    <i class="material-icons">arrow_drop_down_circle</i>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="#">Merchandising</a>
