--- a/views/layout.erb
+++ b/views/layout.erb
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
-                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MAS
+                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">
                     <i class="material-icons">arrow_drop_down_circle</i>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
