--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,7 +24,7 @@
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">
-                    <i class="material-icons">library_music</i>
+                    <i class="material-icons">play_arrow</i>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="#">Audios</a>
@@ -34,7 +34,9 @@
             </li>
 
             <li class="w3-hide-small">
-                <a href="#" class="w3-padding-large">FECHAS</a>
+                <a href="#" class="w3-padding-large">
+                    <i class="material-icons">skip_next</i>
+                </a>
             </li>
             <li class="w3-hide-small">
                 <a href="#" class=" w3-padding-large">
