--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,7 +22,7 @@
                 </a>
 
             </li>
-            <li class="w3-hide-small w3-dropdown-hover w3-center">
+            <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">
                     <i class="material-icons">play_arrow</i> Música
                 </a>
@@ -33,17 +33,17 @@
                 </div>
             </li>
 
-            <li class="w3-hide-small w3-center">
+            <li class="w3-hide-small">
                 <a href="#" class="w3-padding-large">
                     <i class="material-icons">skip_next</i> Recitales
                 </a>
             </li>
-            <li class="w3-hide-small w3-center">
+            <li class="w3-hide-small">
                 <a href="#" class=" w3-padding-large">
                     <i class="material-icons">mail</i> Contacto
                 </a>
             </li>
-            <li class="w3-hide-small w3-dropdown-hover w3-right">
+            <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">
                     <i class="material-icons">arrow_drop_down_circle</i> Mas
                 </a>
