--- a/views/layout.erb
+++ b/views/layout.erb
@@ -58,8 +58,7 @@
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="#">Merchandising</a>
-                    <a href="#">Extras</a>
-                    <a href="#">Media</a>
+                    <a href="#">Entradas</a>
                 </div>
             </li>
             <li class="w3-hide-small w3-right">
