--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -7,7 +7,7 @@
         <title>Buena Cosecha, Ska Reggae | Recitales pasados</title>
     </head>
     <body>
-        <div class="w3-container w3-teal">
+        <div class="w3-container w3-teal w3-padding-32">
             <h1>Loca Bohemia | 20 de Agosto del 2016</h1>
         </div>
 
@@ -17,7 +17,7 @@
                 <div class="w3-card-2">
                     <img src="/imagenes/galeria/band1.jpg" style="width:100%">
                     <div class="w3-container">
-                        <h5>5 La banda completa</h5>
+                        <h5>La banda completa</h5>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,22 @@
                     </div>
                 </div>
             </div>
-
+            <div class="w3-third">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/rom.jpg" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Romi!</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-third">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/uri.jpg" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Uri!</h5>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </body>
