--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title></title>
+    <title>Buena Cosecha | Ska Reggae </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
