--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -7,81 +7,77 @@
         <title>Buena Cosecha, Ska Reggae | Recitales pasados</title>
     </head>
     <body>
-        <div class="w3-container w3-teal w3-padding-32">
+        <div class="w3-container w3-amber w3-padding-32">
             <h1>Loca Bohemia | 20 de Agosto del 2016</h1>
         </div>
 
         <div class="w3-row-padding w3-margin-top">
 
-            <div class="w3-third">
+            <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/band1.jpg" style="width:100%">
+                    <img src="/imagenes/galeria/band1.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>La banda completa</h5>
                     </div>
                 </div>
             </div>
-
-            <div class="w3-third">
+            <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/bet.jpg" style="width:100%">
+                    <img src="/imagenes/galeria/bet.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>El Beto!</h5>
                     </div>
                 </div>
             </div>
-
-            <div class="w3-third">
+            <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/dan.jpg" style="width:100%">
+                    <img src="/imagenes/galeria/dan.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>Dani!</h5>
                     </div>
                 </div>
             </div>
-
-        </div>
-        <div class="w3-row-padding w3-margin-top">
-
-            <div class="w3-third">
+            <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/danilo.jpg" style="width:100%">
+                    <img src="/imagenes/galeria/uri.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Uri!</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="w3-row-padding w3-margin-top">
+          
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/danilo.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>Danilo!</h5>
                     </div>
                 </div>
             </div>
-
-            <div class="w3-third">
+            <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/gast.jpg" style="width:100%">
+                    <img src="/imagenes/galeria/gast.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>El pela!</h5>
                     </div>
                 </div>
             </div>
-
-            <div class="w3-third">
+            <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/hern.jpg" style="width:100%">
+                    <img src="/imagenes/galeria/hern.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>Herny!</h5>
                     </div>
                 </div>
             </div>
-            <div class="w3-third">
+            <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/rom.jpg" style="width:100%">
+                    <img src="/imagenes/galeria/rom.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
                         <h5>Romi!</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-third">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/uri.jpg" style="width:100%">
-                    <div class="w3-container">
-                        <h5>Uri!</h5>
                     </div>
                 </div>
             </div>
