--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -7,7 +7,11 @@
         <title>Buena Cosecha, Ska Reggae | Recitales pasados</title>
     </head>
     <body>
-        <div class="w3-container w3-amber w3-padding-32">
+      <br>
+      <br>
+      <br>
+      <br>
+        <div class="w3-container w3-orange">
             <h1>Loca Bohemia | 20 de Agosto del 2016</h1>
         </div>
 
@@ -39,16 +43,16 @@
             </div>
             <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/uri.jpg" class="w3-border w3-padding" style="width:100%">
+                    <img src="/imagenes/galeria/rom.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
-                        <h5>Uri!</h5>
+                        <h5>Romi!</h5>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="w3-row-padding w3-margin-top">
-          
+
             <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
                     <img src="/imagenes/galeria/danilo.jpg" class="w3-border w3-padding" style="width:100%">
@@ -73,15 +77,15 @@
                     </div>
                 </div>
             </div>
+
             <div class="w3-quarter w3-display-container">
                 <div class="w3-card-2">
-                    <img src="/imagenes/galeria/rom.jpg" class="w3-border w3-padding" style="width:100%">
+                    <img src="/imagenes/galeria/uri.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
-                        <h5>Romi!</h5>
+                        <h5>Uri!</h5>
                     </div>
                 </div>
             </div>
         </div>
-
     </body>
 </html>
