--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -11,7 +11,7 @@
       <br>
       <br>
       <br>
-        <div class="w3-container w3-orange w3-half">
+        <div class="w3-container w3-orange">
             <h1>Loca Bohemia | 20 de Agosto del 2016</h1>
         </div>
 
