--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,7 +16,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">
+                <a href="/" class="w3-hover-none w3-hover-text-grey w3-padding-large">
                     <i class="material-icons">home</i>
                 </a>
 
