--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -10,7 +10,6 @@
       <br>
       <br>
       <br>
-      <br>
         <div class="w3-container w3-orange">
             <h1>Loca Bohemia | 20 de Agosto del 2016</h1>
         </div>
@@ -21,7 +20,7 @@
                 <div class="w3-card-2">
                     <img src="/imagenes/galeria/band1.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
-                        <h5>La banda completa</h5>
+                        <h5>La banda loca!</h5>
                     </div>
                 </div>
             </div>
