--- a/views/layout.erb
+++ b/views/layout.erb
@@ -45,7 +45,7 @@
 
             </li>
             <li class="w3-hide-small">
-                <a href="#" class=" w3-padding-large">
+                <a class=" w3-padding-large" href="mailto:buenacosecha@gmail.com?subject=contacto">
                     <i class="material-icons">mail</i>
                     Contacto
                 </a>
