--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,7 @@
 
             <!-- Automatic Slideshow Images -->
             <div class="mySlides w3-display-container ">
-                <img src="/imagenes/logo.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/band.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -41,91 +41,74 @@
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
-                        <b>en vivo</b>
+                        <b>en vivo!</b>
                     </p>
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/danilo.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/galeria/band2.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Danilo!</h3>
-                    <p>
-                        <b>Buena Cosecha!</b>
-                    </p>
-                </div>
-            </div>
-            <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/rom.jpg" class="w3-animate-fading" style="width:100%">
-                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Romi!</h3>
-                    <p>
-                        <b>Buena Cosecha!</b>
-                    </p>
-                </div>
-            </div>
-            <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/dan.jpg" class="w3-animate-fading" style="width:100%">
-                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Dani!</h3>
-                    <p>
-                        <b>Buena Cosecha!</b>
-                    </p>
-                </div>
-            </div>
-            <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/bet.jpg" class="w3-animate-fading" style="width:100%">
-                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Beto!</h3>
-                    <p>
-                        <b>Buena Cosecha!</b>
-                    </p>
-                </div>
-            </div>
-            <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/uri.jpg" class="w3-animate-fading" style="width:100%">
-                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Uri!</h3>
-                    <p>
-                        <b>Buena Cosecha!</b>
-                    </p>
-                </div>
-            </div>
-            <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/gast.jpg" class="w3-animate-fading" style="width:100%">
-                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Gaston!</h3>
-                    <p>
-                        <b>Buena Cosecha!</b>
-                    </p>
-                </div>
-            </div>
-            <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/hern.jpg" class="w3-animate-fading" style="width:100%">
-                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Hernan!</h3>
-                    <p>
-                        <b>Buena Cosecha!</b>
-                    </p>
-                </div>
-            </div>
-            <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/vientos.jpg" class="w3-animate-fading" style="width:100%">
-                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Vientos!</h3>
+                    <h3>Buena Cosecha!</h3>
                     <p>
                         <b>En vivo!</b>
                     </p>
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/pedales.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/galeria/band3.jpg" class="w3-animate-fading" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Rock!</h3>
+                    <h3>Buena Cosecha!!</h3>
+                    <p>
+                        <b>En vivo!!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/galeria/band4.jpg" class="w3-animate-fading" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Buena Cosecha!</h3>
                     <p>
                         <b>En vivo!</b>
                     </p>
                 </div>
             </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/galeria/band5.jpg" class="w3-animate-fading" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Buena Cosecha!</h3>
+                    <p>
+                        <b>En vivo!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/galeria/band6.jpg" class="w3-animate-fading" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Buena Cosecha!!</h3>
+                    <p>
+                        <b>En vivo!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/galeria/band7.jpg" class="w3-animate-fading" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Buena Cosecha!!</h3>
+                    <p>
+                        <b>En vivo!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/galeria/band8.jpg" class="w3-animate-fading" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Buena Cosecha!!</h3>
+                    <p>
+                        <b>En vivo!</b>
+                    </p>
+                </div>
+            </div>
+            
 
             <!-- The Band Section -->
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
