--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,7 @@
 
             <!-- Automatic Slideshow Images -->
             <div class="mySlides w3-display-container ">
-                <img src="/imagenes/bandd.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/bandd.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band1.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/galeria/band1.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band2.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/galeria/band2.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band3.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/galeria/band3.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
                     <p>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band4.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/galeria/band4.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band5.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/galeria/band5.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band6.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/galeria/band6.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
                     <p>
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band7.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/galeria/band7.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
                     <p>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band8.jpg" class="w3-animate-fading" style="width:100%">
+                <img src="/imagenes/galeria/band8.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
                     <p>
